--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,18 @@ a {
   background-color: transparent;
   text-decoration: none;
 }
+
+body {
+  background-color: #f9f9f9;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
